--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Assignment</string>
+    
+    <string name="main_activity_title">Guardian Feed</string>
+    <string name="load_more">Loading more...</string>
 </resources>
