--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     
     <string name="main_activity_title">Guardian Feed</string>
     <string name="load_more">Loading more...</string>
+
+    <string name="simple_image_transition">simple_activity_image_transition</string>
+    <string name="simple_text_transition">simple_activity_text_transition</string>
 </resources>
